--- a/public/less/frontend/components/meet-team-v2.less
+++ b/public/less/frontend/components/meet-team-v2.less
@@ -78,6 +78,8 @@
       border-radius: 5px;
       background-repeat: no-repeat;
       background-position: center; 
+      background-size: cover; //#10715
+      overflow: hidden;
     }
 
     .team-max-width {
