In Activity Timeline, abbreviate long form (or query string) field values #10720

--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -189,7 +189,8 @@
 	                                    <div class="col-xs-12 content-data">
 	                                        <ul class="form-values">
 	                                            <li ng-repeat="(k,v) in activity.extraFields">
-	                                                <b>{{k | formatText}}</b>: {{v}}
+	                                                <b>{{k | formatText}}</b>: 
+	                                                <span title="{{v}}" class="activity-text-wrap">{{v}}</span>
 	                                            </li>
 	                                        </ul>	                         
 	                                    </div>
