--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -356,6 +356,14 @@ contact-details-component{
                     }
                     div.content-data{
                         padding-top: 5px;
+                        .activity-text-wrap{
+                            display: inline-block;
+                            max-width: 100%;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            vertical-align: bottom;
+                        }
                     }
                     div.activity-time{
                         text-align: right;
