--- a/public/less/ssb-site-builder/ssb-sections.less
+++ b/public/less/ssb-site-builder/ssb-sections.less
@@ -115,6 +115,14 @@
     }
 }
 
+@media screen and (min-width: 767px) {
+        .ssb-page-section-layout-video-bg.ssb-page-section-layout-gallery-v6, .ssb-page-section-layout-video-bg.ssb-page-section-layout-gallery-v6 .bg-video,
+        .ssb-page-section-layout-video-bg.ssb-page-section-layout-gallery-v7, .ssb-page-section-layout-video-bg.ssb-page-section-layout-gallery-v7 .bg-video,
+        .ssb-page-section-layout-video-bg.ssb-page-section-layout-gallery-v8, .ssb-page-section-layout-video-bg.ssb-page-section-layout-gallery-v8 .bg-video{
+           height: auto;
+        }
+}
+
 .flex-container {
     display: flex;
     align-items: center;
