--- a/public/components/feature-list_v6.html
+++ b/public/components/feature-list_v6.html
@@ -5,11 +5,12 @@
     <span  ng-show="scroll.element.left" ng-click="moveLeft()" class="feature-left fa fa-chevron-left" ></span>
     <span  ng-show="(scroll.hasScroll && scroll.started==0) || scroll.element.right"  ng-click="moveRight()" class="feature-right fa fa-chevron-right" ></span>
     <div class="row features-wrap feature-list-container" ng-init="setSelectedFeatureIndex(0)">
-        <ul class="list-features list-features-{{component._id}} col-sm-4">
+        <ul class="list-features list-features-{{component._id}} col-sm-4" ng-show="component.features.length != 0">
+
             <li class="feature" ng-attr-style="{{listStyles(component, $index == features.featureIndex)}}" ng-repeat="feature in component.features" ng-click="setSelectedFeatureIndex($index)" ng-class="{'active': $index == features.featureIndex}">
                 <a class="feature-heading" ng-attr-style="{{setStyles(component.formSettings)}}">
-                    <div class="fetaure-tabs-icon"> 
-                        <div elem ng-model="feature.top"></div>    
+                    <div class="fetaure-tabs-icon">
+                        <div elem ng-model="feature.top"></div>
                     </div>
                     <div class="features-tabs-heading">
                         <div elem ng-model="feature.heading"></div>
@@ -22,10 +23,10 @@
                             <i class='fa fa-plus'></i>
                         </div>
                     </div>
-                </a>                
+                </a>
             </li>
         </ul>
-        <div data-repeat-index-id="{{features.featureIndex}}">
+        <div data-repeat-index-id="{{features.featureIndex}}" ng-show="component.features.length != 0">
             <div class="feature-tab-content" ng-if="!loading && isEditing" >
                 <div class="col-sm-4 col-xs-12">
                     <div ng-if="component.features.length>0" elem ng-model="component.features[features.featureIndex].content"></div>
@@ -39,7 +40,7 @@
             <div class="feature-tab-content" ng-if="!isEditing">
                 <div ng-repeat="feature in component.features" ng-if="$index == features.featureIndex">
                     <div class="{{updateFeatureClass(component.elementStyles,features.featureIndex)?'col-sm-4':'col-sm-8'}} col-xs-12">
-                        <div elem ng-model="component.features[features.featureIndex].content"></div> 
+                        <div elem ng-model="component.features[features.featureIndex].content"></div>
                     </div>
                     <div class="{{updateFeatureClass(component.elementStyles,features.featureIndex)?'col-sm-4 col-xs-12':'ng-hide'}} ">
                         <div elem ng-model="component.features[features.featureIndex].media"></div>
@@ -47,6 +48,10 @@
                 </div>
             </div>
         </div>
-        
+        <div ng-show="component.features.length == 0" class="list-features list-features-{{component._id}} col-sm-4">
+            <a ng-click="addFeatureService(0)" class="center btn btn-primary btn-lg btn-wide btn-o add-feature"> <i class="fa fa-plus"></i>
+             Add New Feature
+            </a>
+        </div>
     </div>
 </div>
