--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-list/ssb-blog-post-list.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-list/ssb-blog-post-list.component.html
@@ -9,7 +9,7 @@
         </ul>
     </div>
     <div ng-if="!vm.blog.posts.length" class="ssb-in-context-info margin-top-20 padding-30">
-        <span class="fa fa-info-circle"> No published posts were found.</span>
+        <span class="fa fa-info-circle" style="position: absolute;"> No published posts were found.</span>
     </div>
     <div class="ssb-blog-featured-slider" ng-class="{'slider-dot-color': vm.component.slider.sliderDotColor, 'slider-active-dot-color': vm.component.slider.sliderActiveDotColor, 'slider-dot-color-opacity': vm.component.slider.sliderDotColorOpacity}">
         <div class="ssb-media-stacked" ind-slider='{ adaptiveHeight: true, slidesToShow:1, dots:true, arrows:false, autoplay:false, touchMove:true, draggable:true }'>
