form changes reverted #8382

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v2.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v2.component.html
@@ -35,10 +35,10 @@
                                     <div class="clearfix mb15 visible-xs"></div>
                                     <div class="col-sm-12 form-builder-submit-btn-container">
                                  
-                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   type="submit" class="btn btn-form btn-block pull-right ssb-theme-btn form-submit-button" ng-disabled="formBuilder.$invalid">
+                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" type="submit" class="btn btn-form btn-block pull-right" ng-disabled="formBuilder.$invalid">
                                             <span elem ng-model="vm.component.submitBtn"></span>
                                         </button>
-                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   class="btn btn-form btn-block pull-right editable-btn-form ssb-theme-btn form-submit-button">
+                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" class="btn btn-form btn-block pull-right editable-btn-form">
                                             <span class-name="btn-form-text" elem ng-model="vm.component.submitBtn"></span>
                                         </div>
                                     </div>
@@ -66,10 +66,10 @@
                                     <div class="clearfix mb15 visible-xs"></div>
                                     <div class="col-sm-12 form-builder-submit-btn-container">
                        
-                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   type="submit" class="btn btn-form btn-block pull-right ssb-theme-btn form-submit-button" ng-disabled="formBuilder.$invalid">
+                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" type="submit" class="btn btn-form btn-block pull-right" ng-disabled="formBuilder.$invalid">
                                             <span elem ng-model="vm.component.submitBtn"></span>
                                         </button>
-                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   class="btn btn-form btn-block pull-right editable-btn-form ssb-theme-btn form-submit-button">
+                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" class="btn btn-form btn-block pull-right editable-btn-form">
                                             <span class-name="btn-form-text" elem ng-model="vm.component.submitBtn"></span>
                                         </div>
                                     </div>
@@ -103,10 +103,10 @@
                                     <div class="clearfix mb15 visible-xs"></div>
                                     <div class="col-sm-12 form-builder-submit-btn-container">
                                     
-                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   type="submit" class="btn btn-form btn-block pull-right ssb-theme-btn form-submit-button" ng-disabled="formBuilder.$invalid">
+                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" type="submit" class="btn btn-form btn-block pull-right" ng-disabled="formBuilder.$invalid">
                                             <span elem ng-model="vm.component.submitBtn"></span>
                                         </button>
-                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   class="btn btn-form btn-block pull-right editable-btn-form ssb-theme-btn form-submit-button">
+                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" class="btn btn-form btn-block pull-right editable-btn-form">
                                             <span class-name="btn-form-text" elem ng-model="vm.component.submitBtn"></span>
                                         </div>
                                     </div>
@@ -132,10 +132,10 @@
                                     <div class="clearfix mb15 visible-xs"></div>
                                     <div class="col-sm-12 form-builder-submit-btn-container">
                                     
-                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"  type="submit" class="btn btn-form btn-block pull-right ssb-theme-btn form-submit-button" ng-disabled="formBuilder.$invalid">
+                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" type="submit" class="btn btn-form btn-block pull-right" ng-disabled="formBuilder.$invalid">
                                             <span elem ng-model="vm.component.submitBtn"></span>
                                         </button>
-                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"  class="btn btn-form btn-block pull-right editable-btn-form ssb-theme-btn form-submit-button">
+                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" class="btn btn-form btn-block pull-right editable-btn-form">
                                             <span class-name="btn-form-text" elem ng-model="vm.component.submitBtn"></span>
                                         </div>
                                     </div>
@@ -160,10 +160,10 @@
                                     <div class="clearfix mb15 visible-xs"></div>
                                     <div class="col-sm-12 form-builder-submit-btn-container">
                                   
-                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}"   type="submit" class="btn btn-form btn-block pull-right ssb-theme-btn form-submit-button" ng-disabled="formBuilder.$invalid || setinvalid">
+                                        <button ng-if="!vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" type="submit" class="btn btn-form btn-block pull-right" ng-disabled="formBuilder.$invalid || setinvalid">
                                             <span elem ng-model="vm.component.submitBtn"></span>
                                         </button>
-                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" class="btn btn-form btn-block pull-right editable-btn-form ssb-theme-btn form-submit-button">
+                                        <div ng-if="vm.isEditing" ng-attr-style="{{vm.buttonStyle(vm.component.btn)}}" ng-class="{'ssb-theme-btn form-submit-button': vm.component.submitBtn}" class="btn btn-form btn-block pull-right editable-btn-form">
                                             <span class-name="btn-form-text" elem ng-model="vm.component.submitBtn"></span>
                                         </div>
                                     </div>
