Fix cApItAlIzAtIoN of email on contact detail page

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -130,7 +130,7 @@
                                 </div>
                                 <div class="details" ng-if="vm.state.contact.details[0].emails[0].email">
                                     <span class="description">
-                                        email:
+                                        Email:
                                     </span>
                                     <span class="value">
                                         {{vm.state.contact.details[0].emails[0].email}}
