#8338 Quote color issue

--- a/public/less/ssb-site-builder/ssb-components/ssb-blog-post-detail.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-blog-post-detail.less
@@ -19,10 +19,9 @@
 
 
     blockquote, &[elem] blockquote {
-        color: rgba(0,0,0,.6);
+        color: inherit;
         font-style: italic;
-        font-size: 28px;
-        // margin-left: -1.75px;
+        font-size: 28px; 
         line-height: 1.48;
         letter-spacing: -.014em;
         border-left: 1px dotted #bfbfbf;
