--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -281,6 +281,10 @@ contact-details-component{
                 }
             }
         }
+
+        .ui-select-multiple.ui-select-bootstrap input.ui-select-search{
+            min-width: 50%;
+        }
         
     }
     .contact-details-right-pane{
