#8932 ul selected updaed

--- a/public/less/ssb-site-builder/ssb-sidebar.less
+++ b/public/less/ssb-site-builder/ssb-sidebar.less
@@ -552,6 +552,9 @@
 }
 
 .ssb-sidebar-section-panel {
+    .sm-ui-select-choices{
+        max-height: 100px !important;
+    }
     position: fixed;
     top: 145px;
     right: 35px;
