Dashboard > There is a mismatch between selected user Id and visitor details on “live visitor” widget for a specific scenario #10647

--- a/public/admin/assets/views/customer-analytics.html
+++ b/public/admin/assets/views/customer-analytics.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <live-status live="liveVisitorDetails" active="activeVisitorDetail" loading="livedataLoading" ></live-status>
+    <live-status live="liveVisitorDetails" active="activeVisitorDetail" loading="livedataLoading" index="selectedVisitorIndex"></live-status>
     <div class="clearfix"></div>
     <div class="row">
         <div class="col-sm-12">
