Dashboard > Live visitor details still appear on “Live visitor details” widget, even after no page event exists on it #10572

--- a/public/admin/assets/views/partials/visitor.html
+++ b/public/admin/assets/views/partials/visitor.html
@@ -101,7 +101,7 @@
                                 </li>
                             </ul>
                         </div> 
-                        <div class="row full-info">
+                        <div class="row full-info" ng-show='activeVisitorDetail.pageEvents.length'>
                             <div class="col-xs-4" style="font-size:16px;font-weight:bold;">
                                 {{activeVisitorDetail.resultInMinutes}}
                                 <br> {{activeVisitorDetail.pageEvents.length}} Page events
