--- a/templates/snippets/index_layout.jade
+++ b/templates/snippets/index_layout.jade
@@ -12,7 +12,7 @@ doctype html
 //if IE 8
     html(class="no-js ie8 oldie", lang="en")
 // [if gt IE 8] <!
-html(class="no-js", lang="en" ng-app="mainApp" ng-controller="MainCtrl as main", ng-init='init(\''+account.website._id+'\')', ng-class="{'hideIntercom': hideIntercom}")
+html(class="no-js", lang="en" ng-app="mainApp" ng-controller="MainCtrl as main", ng-init='init(\''+account.website._id+'\')')
     // <![endif]
     head
         block head
