#8372 close button added

--- a/public/admin/assets/js/ssb-site-builder/ssb-controls/ssb-sidebar/ssb-sidebar.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-controls/ssb-sidebar/ssb-sidebar.component.html
@@ -166,6 +166,7 @@
 
             <span ng-if="vm.uiState.isBlogPage" tooltip-placement="bottom"
                 tooltip="Blog page layouts are not yet customizable. Stay tuned." tooltip-append-to-body="true">Blog page layouts are not yet customizable. Stay tuned.</span>
+                <div class="close-panel ti-close"  ng-click="vm.uiState.openSidebarPanel = ''"></div>
         </div>
     </div>
 
